--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,20 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./codebase/rdicidr-0.1.0/
 
     - name: Run Linter
       run: npm run lint
+      working-directory: ./codebase/rdicidr-0.1.0/
 
     - name: Run formatter
       run: npm run prettier
+      working-directory: ./codebase/rdicidr-0.1.0/
 
     - name: Run tests
       run: CI=true npm run test
+      working-directory: ./codebase/rdicidr-0.1.0/
 
     - name: Build application
       run: npm run build
+      working-directory: ./codebase/rdicidr-0.1.0/
