--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,11 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: '15.14.0'
+        check-latest: true
 
-    - name: Install dependencies
-      run: npm install
+    - name: Install dependencies npm@7
+      run: npm install -g npm@7
       working-directory: ./codebase/rdicidr-0.1.0/
 
     - name: Run Linter
